--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "towntap",
-  "main": "expo-router/entry",
+  "main": "node_modules/expo/AppEntry.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -13,23 +13,42 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "~14.0.4",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.47",
-    "expo-font": "~13.0.4",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.21",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.9",
-    "expo-web-browser": "~14.0.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13"
+    "@react-navigation/native-stack": "^7.3.26",
+    "@supabase/supabase-js": "^2.58.0",
+    "expo": "~53.0.23",
+    "expo-blur": "^15.0.7",
+    "expo-font": "~13.3.2",
+    "expo-haptics": "^15.0.7",
+    "expo-image-picker": "~16.1.4",
+    "expo-linking": "~7.1.7",
+    "expo-localization": "^17.0.7",
+    "expo-location": "~18.1.6",
+    "expo-notifications": "~0.31.4",
+    "expo-permissions": "^14.4.0",
+    "expo-router": "~5.1.7",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.11",
+    "expo-web-browser": "~14.2.0",
+    "i18next": "^25.5.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-i18next": "^15.7.3",
+    "react-native": "0.79.5",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-url-polyfill": "^3.0.0",
+    "react-native-web": "^0.20.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
