--- a/app.json
+++ b/app.json
@@ -1,17 +1,28 @@
 {
   "expo": {
-    "name": "towntap",
-    "slug": "towntap",
+    "name": "LocalMart",
+    "slug": "localmart",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "towntap",
+    "scheme": "localmart",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.localmart.app",
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "This app needs location access to find nearby businesses and services.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "This app needs location access to provide live tracking for services.",
+        "NSCameraUsageDescription": "This app needs camera access to take photos for orders and services.",
+        "NSMicrophoneUsageDescription": "This app needs microphone access for voice messages and calls.",
+        "NSPhotoLibraryUsageDescription": "This app needs photo library access to upload images for products and services.",
+        "NSContactsUsageDescription": "This app needs contacts access to help you invite friends.",
+        "NSFaceIDUsageDescription": "Use Face ID to authenticate securely and quickly access your account."
+      }
     },
     "android": {
+      "package": "com.localmart.app",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
@@ -19,7 +30,20 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "permissions": [
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_BACKGROUND_LOCATION",
+        "CAMERA",
+        "RECORD_AUDIO",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "USE_BIOMETRIC",
+        "USE_FINGERPRINT",
+        "VIBRATE",
+        "RECEIVE_BOOT_COMPLETED"
+      ]
     },
     "web": {
       "output": "static",
@@ -27,6 +51,15 @@
     },
     "plugins": [
       "expo-router",
+      "expo-location",
+      "expo-camera",
+      "expo-notifications",
+      "expo-local-authentication",
+      "expo-image-picker",
+      "expo-document-picker",
+      "expo-av",
+      "expo-barcode-scanner",
+      "expo-media-library",
       [
         "expo-splash-screen",
         {
