--- a/package.json
+++ b/package.json
@@ -10,26 +10,36 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "clean": "expo start --clear"
+    "clean": "expo start --clear",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --coverage --watchAll=false"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@shopify/flash-list": "^2.2.0",
     "@stripe/stripe-react-native": "^0.57.0",
     "@supabase/supabase-js": "^2.81.1",
     "@tanstack/react-query": "^5.90.8",
+    "@types/lodash": "^4.17.21",
     "date-fns": "^4.1.0",
     "expo": "~54.0.23",
     "expo-constants": "~18.0.10",
+    "expo-crypto": "^15.0.7",
+    "expo-file-system": "^19.0.19",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-local-authentication": "^17.0.7",
     "expo-location": "^19.0.7",
     "expo-notifications": "^0.32.12",
     "expo-router": "~6.0.14",
@@ -39,25 +49,53 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
+    "jotai": "^2.15.1",
+    "lodash": "^4.17.21",
+    "moti": "^0.30.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.66.0",
+    "react-hook-form": "^7.67.0",
     "react-native": "0.81.5",
+    "react-native-animatable": "^1.4.0",
+    "react-native-device-info": "^15.0.1",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-maps": "^1.26.18",
+    "react-native-google-places-autocomplete": "^2.6.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-keychain": "^10.0.0",
+    "react-native-maps": "^1.26.19",
+    "react-native-mmkv": "^4.0.1",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-orientation-locker": "^1.7.0",
+    "react-native-performance": "^6.0.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-star-rating-widget": "^1.9.2",
+    "react-native-super-grid": "^6.0.2",
+    "react-native-svg": "^15.15.0",
+    "react-native-toast-message": "^2.3.3",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "zod": "^4.1.13",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
+    "babel-jest": "^30.2.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "jest": "^30.2.0",
+    "jest-expo": "^54.0.13",
+    "react-native-testing-library": "^2.2.0",
     "typescript": "~5.9.2"
   },
   "private": true
