--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@expo/vector-icons": "^15.0.3",
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -30,6 +31,7 @@
     "@types/lodash": "^4.17.21",
     "date-fns": "^4.1.0",
     "expo": "~54.0.23",
+    "expo-application": "~7.0.8",
     "expo-constants": "~18.0.10",
     "expo-crypto": "^15.0.7",
     "expo-file-system": "^19.0.19",
